; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo_odbc/extr_odbc_stmt.c_odbc_stmt_fetch.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo_odbc/extr_odbc_stmt.c_odbc_stmt_fetch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }
%struct.TYPE_5__ = type { i32 }

@SQL_FETCH_NEXT = common dso_local global i32 0, align 4
@SQL_FETCH_PRIOR = common dso_local global i32 0, align 4
@SQL_FETCH_FIRST = common dso_local global i32 0, align 4
@SQL_FETCH_LAST = common dso_local global i32 0, align 4
@SQL_FETCH_ABSOLUTE = common dso_local global i32 0, align 4
@SQL_FETCH_RELATIVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"HY106\00", align 1
@SQL_SUCCESS = common dso_local global i64 0, align 8
@SQL_SUCCESS_WITH_INFO = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"SQLFetchScroll\00", align 1
@SQL_NO_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i32)* @odbc_stmt_fetch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @odbc_stmt_fetch(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %10, align 8
  %15 = load i32, i32* %6, align 4
  switch i32 %15, label %28 [
    i32 130, label %16
    i32 129, label %18
    i32 132, label %20
    i32 131, label %22
    i32 133, label %24
    i32 128, label %26
  ]

16:                                               ; preds = %3
  %17 = load i32, i32* @SQL_FETCH_NEXT, align 4
  store i32 %17, i32* %9, align 4
  br label %33

18:                                               ; preds = %3
  %19 = load i32, i32* @SQL_FETCH_PRIOR, align 4
  store i32 %19, i32* %9, align 4
  br label %33

20:                                               ; preds = %3
  %21 = load i32, i32* @SQL_FETCH_FIRST, align 4
  store i32 %21, i32* %9, align 4
  br label %33

22:                                               ; preds = %3
  %23 = load i32, i32* @SQL_FETCH_LAST, align 4
  store i32 %23, i32* %9, align 4
  br label %33

24:                                               ; preds = %3
  %25 = load i32, i32* @SQL_FETCH_ABSOLUTE, align 4
  store i32 %25, i32* %9, align 4
  br label %33

26:                                               ; preds = %3
  %27 = load i32, i32* @SQL_FETCH_RELATIVE, align 4
  store i32 %27, i32* %9, align 4
  br label %33

28:                                               ; preds = %3
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @strcpy(i32 %31, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %57

33:                                               ; preds = %26, %24, %22, %20, %18, %16
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %7, align 4
  %39 = call i64 @SQLFetchScroll(i32 %36, i32 %37, i32 %38)
  store i64 %39, i64* %8, align 8
  %40 = load i64, i64* %8, align 8
  %41 = load i64, i64* @SQL_SUCCESS, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %44

43:                                               ; preds = %33
  store i32 1, i32* %4, align 4
  br label %57

44:                                               ; preds = %33
  %45 = load i64, i64* %8, align 8
  %46 = load i64, i64* @SQL_SUCCESS_WITH_INFO, align 8
  %47 = icmp eq i64 %45, %46
  br i1 %47, label %48, label %50

48:                                               ; preds = %44
  %49 = call i32 @pdo_odbc_stmt_error(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %57

50:                                               ; preds = %44
  %51 = load i64, i64* %8, align 8
  %52 = load i64, i64* @SQL_NO_DATA, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %54, label %55

54:                                               ; preds = %50
  store i32 0, i32* %4, align 4
  br label %57

55:                                               ; preds = %50
  %56 = call i32 @pdo_odbc_stmt_error(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %57

57:                                               ; preds = %55, %54, %48, %43, %28
  %58 = load i32, i32* %4, align 4
  ret i32 %58
}

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i64 @SQLFetchScroll(i32, i32, i32) #1

declare dso_local i32 @pdo_odbc_stmt_error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
